# Software-KT

./: LICENSE  README.md  tasks-status-board.org
ROS2/Learning/Exercises/: temperature-control-system.org
ROS2/Learning/exercises-workspace/: .gitignore  CMakeLists.txt  ros_cmake_env.sh
ROS2/Learning/exercises-workspace/src/temperature_control_systems/: CMakeLists.txt  package.xml
ROS2/Learning/exercises-workspace/src/temperature_control_systems/src/: temperature_systems_controller.cpp
ROS2/Learning/exercises-workspace/src/temperature_control_systems_interfaces/: CMakeLists.txt  package.xml
ROS2/Learning/exercises-workspace/src/temperature_control_systems_interfaces/action/: SetTemperature.action
ROS2/Learning/exercises-workspace/src/temperature_control_systems_interfaces/srv/: GetCurrentTemperature.srv  IncrementDecrementTemperature.srv
SoftwareLND/exercises-workspace/src/temperature_control_systems/: CMakeLists.txt
SoftwareLND/exercises-workspace/src/temperature_control_systems/src/: temperature_systems_controller.cpp
