<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>temperature_control_systems</name>
	<version>0.0.0</version>
	<description>A temperature control systems module</description>
	<maintainer email="anonyman637@gmail.com">noman637</maintainer>
	<license>MIT</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>rclcpp</depend>
	<depend>std_msgs</depend>
	<depend>rclcpp_action</depend>
	<depend>temperature_control_systems_interfaces</depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>